# librus-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  publish.yml  release-plz.yml
examples/: announcements.rs  test_api.rs
src/: error.rs  lib.rs  structs.rs
src/structs/: announcements.rs  events.rs  grades.rs  lessons.rs  me.rs  messages.rs  timetable.rs  users.rs
testapi/: Cargo.toml
testapi/src/: main.rs
