[package]
name = "librus-rs"
description = "Rust client for Librus Synergia - the Polish school diary system"
license = "MIT"
version = "2.0.1"
edition = "2021"
repository = "https://github.com/flakm/librus-api"
documentation = "https://docs.rs/librus-rs"
keywords = ["librus", "synergia", "school", "api", "client"]
categories = ["api-bindings"]


[dependencies]
reqwest = { version = "0.13", features = ["json", "native-tls", "cookies", "stream", "form"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"
